# SR-AIbridge-

./: .dominion_seal.json  .env  .env.deploy  .env.envsync.example  .env.example  .env.netlify  .env.netlify.example  .env.production  .env.render.example  .env.template  .env.v197f.example  .env.v197q.example  .gitignore  .npmignore  .npmrc  =2.9.0  =5.0.0  AI-Safety_Resonance_Memo_2025-12-24.txt  AISafety_Resonance_Memo_2025-12-17.txt  AI_Safety_Resonance_Memo_2025-12-24.txt  Academia_Resonance_Memo_2025-12-24.txt  AgriFood_Resonance_Memo_2025-12-12.txt  AgriFood_Resonance_Memo_2025-12-24.txt  Auto_Resonance_Memo_2025-12-12.txt  Auto_Resonance_Memo_2025-12-24.txt  Aviation_Resonance_Memo_2025-12-24.txt  BACKEND_INTEGRATION.md  BCSE_IMPLEMENTATION_SUMMARY.md  BRH_DEPLOYMENT_GUIDE.md  BRH_QUICK_REF.md  BRIDGE_HARMONY_REPORT.md  BRIDGE_SOVEREIGNTY_IMPLEMENTATION_SUMMARY.md  BRIDGE_SYSTEM_REPAIR_SUMMARY.md  CHANGELOG.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_INTEGRATION_GUIDE.md  COMPLIANCE_QUICK_REF.md  COMPREHENSIVE_SCAN_REPORT.md  Crypto_Resonance_Memo_2025-12-12.txt  Crypto_Resonance_Memo_2025-12-24.txt  (+128 more)
.copilot/: config.json
.forge/: sovereign_policy.json
.genesis/: tde_state.json
.github/: README.md  copilot_agent_settings.yml
backend/: README.md  main.py  requirements.txt  server.js
brh/: api.py  app.py  bootstrap.py  chaos.py  consensus.py  forge_auth.py  heartbeat_daemon.py  run.py  test_app.py  test_chaos_recovery.py
bridge-backend/: .env  .gitignore  =0.9  =3.9.0  __init__.py  app.py  autonomous_scheduler.py  db.py  db.py.backup  integration_test.py  main.py  main_old.py  main_sqlite.py  models.py  render.yaml  requirements.txt  schemas.py  seed.py  self_test.py  startup.py  websocket_manager.py
bridge-catalog/: .env.example  .env.netlify  .env.production  .gitignore  .netlifyignore  AUDIT_COMPLETE_SUMMARY.md  Academia_Resonance_Memo_2025-12-12.txt  DIAGNOSTIC_REPORT.md  FINAL_REMEDIATION_REPORT.md  HOW_TO_USE_THE_BRIDGE.md  Procfile  README.md  SECURITY_AUDIT_SUMMARY.md  SOVEREIGNTY_IMPLEMENTATION_SUMMARY.md  START_HERE_REMEDIATION.md  Sovereign_seal_chain.md  Temporal anchor  Temporal_anchor.md  Temporal_anchor_Quick_start  WALKTHROUGH_SUMMARY.md  academia_arduino_node.c  academia_lab_monitor.py  activate_autonomy.py  aviation_module.c  bridge  icu_resonance_monitor.py  requirements-dev.txt  requirements.txt  resonance_auto.c  (+3 more)
(+1429 files in other folders)
