[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-backend"
version = "5.5.3"
description = "SR-AIbridge Backend - Sovereign Runtime for AI Agent Coordination"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Kyle S Whitlock", email = "kswhitlock9493@gmail.com"}
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
    "sympy==1.13.1",
    "numpy==1.26.4",
    "pynacl>=1.5.0",
    "cryptography>=41.0.0",
    "tabulate>=0.9",
    "python-multipart>=0.0.5",
    "stripe>=5.0.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/kswhitlock9493-jpg/SR-AIbridge-"
Repository = "https://github.com/kswhitlock9493-jpg/SR-AIbridge-"

[tool.setuptools]
packages.find = {}  # Automatically discover all packages
